[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/tilesets/city_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://content/trigger/TriggerArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/areas/City/CityBankstreetArea/CityBankStreetArea.gd" type="Script" id=3]
[ext_resource path="res://content/trigger/AreaChangeTrigger.gd" type="Script" id=4]
[ext_resource path="res://assets/tilesets/collision_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://content/areas/components/TrafficLight.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/animated_sprites/tres/cars/animated_yellow_car.tres" type="SpriteFrames" id=7]
[ext_resource path="res://assets/animated_sprites/tres/cars/animated_red_car.tres" type="SpriteFrames" id=8]
[ext_resource path="res://content/areas/CrossingArea.tscn" type="PackedScene" id=11]
[ext_resource path="res://content/movables/NPC.tscn" type="PackedScene" id=12]
[ext_resource path="res://content/trigger/StartCarTrigger.gd" type="Script" id=13]
[ext_resource path="res://assets/animated_sprites/tres/cars/animated_white_car.tres" type="SpriteFrames" id=14]

[node name="CityBankstreetArea" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 2, -65528, 1, 0, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 1, 2, 65535, 1, 65536, 0, 1, 65537, 1, 1, 65537, 2, 1, 65537, 3, 1, 65537, 4, 1, 65537, 5, 1, 65538, 6, 25, 131074, 7, 25, 131076, 8, 1, 65536, 9, 1, 65537, 10, 1, 65537, 11, 1, 65537, 12, 1, 65538, 131071, 1, 65536, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65538, 65542, 25, 131074, 65543, 25, 131076, 65544, 1, 65536, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65537, 65548, 1, 65538, 196607, 1, 65536, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65538, 131078, 25, 131074, 131079, 25, 131076, 131080, 1, 65536, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65538, 262143, 1, 65536, 196608, 1, 65537, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65538, 196614, 25, 131074, 196615, 25, 131076, 196616, 1, 65536, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 1, 65538, 327679, 1, 65536, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65538, 262150, 25, 65538, 262151, 25, 65540, 262152, 1, 65536, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65538, 393215, 1, 131072, 327680, 1, 131073, 327681, 1, 131073, 327682, 1, 131073, 327683, 1, 131073, 327684, 1, 131073, 327685, 1, 131074, 327686, 25, 131074, 327687, 25, 131076, 327688, 1, 131072, 327689, 1, 131073, 327690, 1, 131073, 327691, 1, 131073, 327692, 1, 131074, 393216, 25, 1, 393217, 25, 1, 393218, 25, 1, 393219, 25, 0, 393220, 25, 1, 393221, 25, 1, 393222, 25, 131080, 393223, 25, 131079, 393224, 25, 1, 393225, 25, 0, 393226, 25, 1, 393227, 25, 1, 458752, 25, 65537, 458753, 25, 131081, 458754, 25, 65537, 458755, 25, 65536, 458756, 25, 65537, 458757, 25, 131081, 458758, 43, 65537, 458759, 25, 65545, 458760, 25, 65537, 458761, 25, 65536, 458762, 25, 65537, 458763, 25, 65545, 524288, 25, 131073, 524289, 25, 131073, 524290, 25, 131073, 524291, 25, 131072, 524292, 25, 131073, 524293, 25, 131073, 524294, 25, 131073, 524295, 25, 131073, 524296, 25, 131073, 524297, 25, 131072, 524298, 25, 131073, 524299, 25, 131073, 655359, 1, 0, 589824, 1, 1, 589825, 1, 1, 589826, 1, 1, 589827, 1, 1, 589828, 1, 1, 589829, 1, 1, 589830, 1, 1, 589831, 1, 1, 589832, 1, 1, 589833, 1, 1, 589834, 1, 1, 589835, 1, 1, 589836, 1, 2, 720895, 1, 65536, 655360, 1, 65537, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 1, 65538, 786431, 1, 65536, 720896, 1, 65537, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65537, 720902, 1, 65537, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65537, 720908, 1, 65538, 851967, 1, 65536, 786432, 1, 65537, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 65537, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65537, 786444, 1, 65538, 917503, 1, 65536, 851968, 1, 65537, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65538, 983039, 1, 65536, 917504, 1, 65537, 917505, 1, 65537, 917506, 1, 65537, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65538, 1048575, 1, 65536, 983040, 1, 65537, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65538, 1114111, 1, 131072, 1048576, 1, 131073, 1048577, 1, 131073, 1048578, 1, 131073, 1048579, 1, 131073, 1048580, 1, 131073, 1048581, 1, 131073, 1048582, 1, 131073, 1048583, 1, 131073, 1048584, 1, 131073, 1048585, 1, 131073, 1048586, 1, 131073, 1048587, 1, 131073, 1048588, 1, 131074 )

[node name="Houses" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 1, 38, 65540, 2, 38, 65542, 3, 38, 65543, 65537, 36, 0, 65538, 36, 1, 65539, 36, 2, 65540, 26, 65536, 131073, 36, 131072, 131074, 36, 131073, 131075, 36, 131074, 131076, 26, 131072, 196609, 36, 131072, 196610, 36, 196609, 196611, 36, 131074, 196612, 26, 131072, 655361, 38, 65540, 655362, 38, 65542, 655363, 38, 65542, 655364, 38, 65542, 655365, 38, 65542, 655366, 38, 65542, 655367, 38, 65542, 655368, 38, 65542, 655369, 38, 65543, 720897, 36, 0, 720898, 36, 1, 720899, 36, 1, 720900, 36, 1, 720901, 36, 1, 720902, 36, 1, 720903, 36, 1, 720904, 36, 1, 720905, 36, 2, 720906, 26, 65536, 786433, 36, 196611, 786434, 36, 196612, 786435, 36, 196612, 786436, 36, 196612, 786437, 36, 196612, 786438, 36, 196612, 786439, 36, 196612, 786440, 36, 196612, 786441, 36, 196613, 786442, 26, 131072, 851969, 36, 196611, 851970, 36, 196612, 851971, 36, 196612, 851972, 36, 196612, 851973, 36, 196612, 851974, 36, 196612, 851975, 36, 196612, 851976, 36, 196612, 851977, 36, 196613, 851978, 26, 131072, 917505, 36, 196611, 917506, 36, 196612, 917507, 36, 196612, 917508, 36, 196612, 917509, 36, 196609, 917510, 36, 196612, 917511, 36, 196612, 917512, 36, 196612, 917513, 36, 196613, 917514, 26, 131072 )

[node name="Details" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
show_collision = true
format = 1
tile_data = PoolIntArray( 262149, 35, 0, 524290, 35, 0, 524296, 35, 0 )

[node name="Collsion" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
show_collision = true
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 131071, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 196607, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 262143, 0, 0, 196609, 0, 0, 196611, 0, 0, 196616, 0, 0, 327679, 0, 0, 393215, 0, 0, 327684, 0, 0, 327685, 0, 0, 327690, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 589826, 0, 0, 589832, 0, 0, 720895, 0, 0, 786431, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 851967, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 917503, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 983039, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 1048575, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0 )

[node name="LeaveRightTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 799.871, 516.282 )
scale = Vector2( 1, 16 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_city_bankstreet_leave_right"

[node name="LeaveRightTrigger" type="Node" parent="LeaveRightTriggerArea"]
script = ExtResource( 4 )
id = "tid_city_bankstreet_leave_right"

[node name="LeaveTopTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.494, -30.9504 )
scale = Vector2( 12, 1 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_city_bankstreet_leave_top"

[node name="LeaveTopTrigger" type="Node" parent="LeaveTopTriggerArea"]
script = ExtResource( 4 )
id = "tid_city_bankstreet_leave_top"

[node name="LeaveOfficeTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 159.852, 222.008 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_city_bankstreet_leave_office"

[node name="LeaveOfficeTrigger" type="Node" parent="LeaveOfficeTriggerArea"]
script = ExtResource( 4 )
id = "tid_city_bankstreet_leave_office"

[node name="LeaveBankTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 350.515, 925.194 )
is_activated_by_collision = true
walkable = true
collision_trigger_id = "tid_city_bankstreet_leave_bank"

[node name="LeaveBankTrigger" type="Node" parent="LeaveBankTriggerArea"]
script = ExtResource( 4 )
id = "tid_city_bankstreet_leave_bank"

[node name="TrafficLight" parent="." groups=[
"persistent",
] instance=ExtResource( 6 )]
position = Vector2( 285.718, 326.512 )
is_on = true
has_crosswalk = true
crosswalk = NodePath("../CrossingArea")

[node name="TrafficLight2" parent="." groups=[
"persistent",
] instance=ExtResource( 6 )]
position = Vector2( 672.513, 320.844 )
is_on = true
has_crosswalk = true
crosswalk = NodePath("../CrossingArea2")

[node name="TrafficLight3" parent="." groups=[
"persistent",
] instance=ExtResource( 6 )]
position = Vector2( 546.521, 194.22 )
has_crosswalk = true
crosswalk = NodePath("../CrossingArea3")

[node name="CrossingArea" parent="." instance=ExtResource( 11 )]
position = Vector2( 224.187, 485.682 )
scale = Vector2( 1, 3 )
slow_down = 0.2
crosswalk = true

[node name="CrossingArea2" parent="." instance=ExtResource( 11 )]
position = Vector2( 609.287, 485.682 )
scale = Vector2( 1, 3 )
slow_down = 0.2
crosswalk = true

[node name="CrossingArea3" parent="." instance=ExtResource( 11 )]
position = Vector2( 448.693, 286.121 )
scale = Vector2( 2, 1 )
slow_down = 0.2
crosswalk = true

[node name="Car8_4" parent="." instance=ExtResource( 12 )]
position = Vector2( 800, 416 )
ignores_crosswalks = false
movement_filename = "res://doc/city_bankstreet/car_8_4_movement.json"
speed = 3.0
active_on_start = true
animation = ExtResource( 7 )
current_position = Vector2( 12, 6 )

[node name="CarStartTrigger" type="Node" parent="Car8_4"]
script = ExtResource( 13 )
id = "tid_city_bankstreet_car_8_4_start"

[node name="Car10_0" parent="." instance=ExtResource( 12 )]
position = Vector2( -32, 544 )
ignores_crosswalks = false
movement_filename = "res://doc/city_bankstreet/car_10_0_movement.json"
speed = 3.0
active_on_start = true
animation = ExtResource( 14 )
current_position = Vector2( -1, 8 )

[node name="CarStartTrigger" type="Node" parent="Car10_0"]
script = ExtResource( 13 )
id = "tid_city_bankstreet_car_10_0_start"

[node name="Car12_1" parent="." instance=ExtResource( 12 )]
position = Vector2( 800, 416 )
ignores_crosswalks = false
movement_filename = "res://doc/city_bankstreet/car_12_1_movement.json"
speed = 3.0
active_on_start = true
animation = ExtResource( 8 )
current_position = Vector2( 12, 6 )

[node name="CarStartTrigger" type="Node" parent="Car12_1"]
script = ExtResource( 13 )
id = "tid_city_bankstreet_car_12_1_start"
